rocketmq-tools/rocketmq-mcp/src/tools/snapshots/rocketmq_mcp__tools__registry__tests__tool_contract_schema_metadata.snap
---
source: rocketmq-tools/rocketmq-mcp/src/tools/registry.rs
expression: contracts
---
[
  {
    "destructive": false,
    "idempotent": true,
    "input_required": [
      "cluster"
    ],
    "input_type": "object",
    "name": "mq_cluster_overview",
    "open_world": true,
    "output_type": "object",
    "read_only": true
  },
  {
    "destructive": false,
    "idempotent": true,
    "input_required": null,
    "input_type": "object",
    "name": "mq_list_topics",
    "open_world": true,
    "output_type": "object",
    "read_only": true
  },
  {
    "destructive": false,
    "idempotent": true,
    "input_required": [
      "cluster",
      "topic"
    ],
    "input_type": "object",
    "name": "mq_describe_topic",
    "open_world": true,
    "output_type": "object",
    "read_only": true
  },
  {
    "destructive": false,
    "idempotent": true,
    "input_required": [
      "cluster",
      "topic"
    ],
    "input_type": "object",
    "name": "mq_query_topic_route",
    "open_world": true,
    "output_type": "object",
    "read_only": true
  },
  {
    "destructive": false,
    "idempotent": true,
    "input_required": null,
    "input_type": "object",
    "name": "mq_list_consumer_groups",
    "open_world": true,
    "output_type": "object",
    "read_only": true
  },
  {
    "destructive": false,
    "idempotent": true,
    "input_required": [
      "cluster",
      "topic",
      "consumer_group"
    ],
    "input_type": "object",
    "name": "mq_query_consumer_lag",
    "open_world": true,
    "output_type": "object",
    "read_only": true
  },
  {
    "destructive": false,
    "idempotent": true,
    "input_required": [
      "cluster",
      "broker_name"
    ],
    "input_type": "object",
    "name": "mq_describe_broker",
    "open_world": true,
    "output_type": "object",
    "read_only": true
  },
  {
    "destructive": false,
    "idempotent": true,
    "input_required": [
      "cluster",
      "topic",
      "consumer_group"
    ],
    "input_type": "object",
    "name": "mq_diagnose_consumer_lag",
    "open_world": true,
    "output_type": "object",
    "read_only": true
  }
]
